@@ -17,6 +17,7 @@
 package com.swirlds.platform.system.events;
 
 import com.hedera.hapi.platform.event.EventCore;
+import com.hedera.hapi.platform.event.EventDescriptor;
 import com.hedera.hapi.platform.event.EventPayload;
 import com.hedera.hapi.platform.event.EventPayload.PayloadOneOfType;
 import com.hedera.hapi.platform.event.StateSignaturePayload;
@@ -31,17 +32,13 @@ import com.swirlds.common.io.streams.SerializableDataOutputStream;
 import com.swirlds.common.platform.NodeId;
 import com.swirlds.platform.system.SoftwareVersion;
 import com.swirlds.platform.system.StaticSoftwareVersion;
-import com.swirlds.platform.system.address.AddressBook;
-import com.swirlds.platform.system.transaction.ConsensusTransactionImpl;
-import com.swirlds.platform.system.transaction.StateSignatureTransaction;
-import com.swirlds.platform.system.transaction.SwirldTransaction;
+import com.swirlds.platform.system.transaction.PayloadWrapper;
 import com.swirlds.platform.util.PayloadUtils;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.io.IOException;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
@@ -85,15 +82,15 @@ public class UnsignedEvent extends AbstractHashable {
     /**
      * the self parent event descriptor
      */
-    private final EventDescriptor selfParent;
+    private final EventDescriptorWrapper selfParent;
 
     /**
      * the other parents' event descriptors
      */
-    private final List<EventDescriptor> otherParents;
+    private final List<EventDescriptorWrapper> otherParents;
 
     /** a combined list of all parents, selfParent + otherParents */
-    private final List<EventDescriptor> allParents;
+    private final List<EventDescriptorWrapper> allParents;
 
     /**
      * creation time, as claimed by its creator
@@ -103,7 +100,7 @@ public class UnsignedEvent extends AbstractHashable {
     /**
      * the payload: an array of transactions
      */
-    private final ConsensusTransactionImpl[] transactions;
+    private final List<PayloadWrapper> transactions;
 
     /**
      * The core event data.
@@ -118,7 +115,7 @@ public class UnsignedEvent extends AbstractHashable {
     /**
      * The event descriptor for this event. Is not itself hashed.
      */
-    private EventDescriptor descriptor;
+    private EventDescriptorWrapper descriptor;
 
     /**
      * Create a UnsignedEvent object
@@ -134,8 +131,8 @@ public class UnsignedEvent extends AbstractHashable {
     public UnsignedEvent(
             @NonNull final SoftwareVersion softwareVersion,
             @NonNull final NodeId creatorId,
-            @Nullable final EventDescriptor selfParent,
-            @NonNull final List<EventDescriptor> otherParents,
+            @Nullable final EventDescriptorWrapper selfParent,
+            @NonNull final List<EventDescriptorWrapper> otherParents,
             final long birthRound,
             @NonNull final Instant timeCreated,
             @NonNull final List<OneOf<PayloadOneOfType>> transactions) {
@@ -155,18 +152,10 @@ public class UnsignedEvent extends AbstractHashable {
                 birthRound,
                 HapiUtils.asTimestamp(timeCreated),
                 this.allParents.stream()
-                        .map(ed -> new com.hedera.hapi.platform.event.EventDescriptor(
-                                ed.getHash().getBytes(), ed.getCreator().id(), ed.getGeneration(), ed.getBirthRound()))
+                        .map(EventDescriptorWrapper::eventDescriptor)
                         .toList(),
                 softwareVersion.getPbjSemanticVersion());
-        this.transactions = transactions.stream()
-                .map(t -> switch (t.kind()) {
-                    case STATE_SIGNATURE_PAYLOAD -> new StateSignatureTransaction(t.as());
-                    case APPLICATION_PAYLOAD -> new SwirldTransaction((Bytes) t.as());
-                    default -> throw new IllegalArgumentException("Unexpected transaction type: " + t.kind());
-                })
-                .toList()
-                .toArray(new ConsensusTransactionImpl[0]);
+        this.transactions = transactions.stream().map(PayloadWrapper::new).toList();
     }
 
     /**
@@ -193,8 +182,8 @@ public class UnsignedEvent extends AbstractHashable {
         out.writeSerializable(softwareVersion, true);
         out.writeInt(NodeId.ClassVersion.ORIGINAL);
         out.writeLong(eventCore.creatorNodeId());
-        out.writeSerializable(selfParent, false);
-        out.writeSerializableList(otherParents, false, true);
+        EventDescriptorWrapper.serialize(out, selfParent);
+        EventDescriptorWrapper.serializeList(out, otherParents);
         out.writeLong(eventCore.birthRound());
         out.writeInstant(HapiUtils.asInstant(eventCore.timeCreated()));
 
@@ -269,9 +258,8 @@ public class UnsignedEvent extends AbstractHashable {
         if (creatorId == null) {
             throw new IOException("creatorId is null");
         }
-        final EventDescriptor selfParent = in.readSerializable(false, EventDescriptor::new);
-        final List<EventDescriptor> otherParents =
-                in.readSerializableList(AddressBook.MAX_ADDRESSES, false, EventDescriptor::new);
+        final EventDescriptorWrapper selfParent = EventDescriptorWrapper.deserialize(in);
+        final List<EventDescriptorWrapper> otherParents = EventDescriptorWrapper.deserializeList(in);
         final long birthRound = in.readLong();
 
         final Instant timeCreated = in.readInstant();
@@ -342,16 +330,19 @@ public class UnsignedEvent extends AbstractHashable {
                 && Objects.equals(otherParents, that.otherParents)
                 && eventCore.birthRound() == that.eventCore.birthRound()
                 && Objects.equals(timeCreated, that.timeCreated)
-                && Arrays.equals(transactions, that.transactions)
+                && Objects.equals(transactions, that.transactions)
                 && (softwareVersion.compareTo(that.softwareVersion) == 0);
     }
 
     @Override
     public int hashCode() {
-        int result =
-                Objects.hash(softwareVersion, creatorId, selfParent, otherParents, eventCore.birthRound(), timeCreated);
-        result = 31 * result + Arrays.hashCode(transactions);
-        return result;
+        return Objects.hash(
+                getSoftwareVersion(),
+                getCreatorId(),
+                getSelfParent(),
+                getOtherParents(),
+                getTimeCreated(),
+                getTransactions());
     }
 
     @Override
@@ -363,7 +354,7 @@ public class UnsignedEvent extends AbstractHashable {
                 .append("otherParents", otherParents)
                 .append("birthRound", eventCore.birthRound())
                 .append("timeCreated", timeCreated)
-                .append("transactions size", transactions == null ? "null" : transactions.length)
+                .append("transactions size", transactions == null ? "null" : transactions.size())
                 .append("hash", getHash() == null ? "null" : getHash().toHex(TO_STRING_BYTE_ARRAY_LENGTH))
                 .toString();
     }
@@ -403,7 +394,7 @@ public class UnsignedEvent extends AbstractHashable {
      * @return the event descriptor for the self parent
      */
     @Nullable
-    public EventDescriptor getSelfParent() {
+    public EventDescriptorWrapper getSelfParent() {
         return selfParent;
     }
 
@@ -413,18 +404,18 @@ public class UnsignedEvent extends AbstractHashable {
      * @return the event descriptors for the other parents
      */
     @NonNull
-    public List<EventDescriptor> getOtherParents() {
+    public List<EventDescriptorWrapper> getOtherParents() {
         return otherParents;
     }
 
     /** @return a list of all parents, self parent (if any), + all other parents */
     @NonNull
-    public List<EventDescriptor> getAllParents() {
+    public List<EventDescriptorWrapper> getAllParents() {
         return allParents;
     }
 
     @NonNull
-    private List<EventDescriptor> createAllParentsList() {
+    private List<EventDescriptorWrapper> createAllParentsList() {
         return !hasSelfParent()
                 ? otherParents
                 : Stream.concat(Stream.of(selfParent), otherParents.stream()).toList();
@@ -439,7 +430,7 @@ public class UnsignedEvent extends AbstractHashable {
         if (selfParent == null) {
             return EventConstants.GENERATION_UNDEFINED;
         }
-        return selfParent.getGeneration();
+        return selfParent.eventDescriptor().generation();
     }
 
     /**
@@ -454,7 +445,7 @@ public class UnsignedEvent extends AbstractHashable {
             return EventConstants.GENERATION_UNDEFINED;
         }
         if (otherParents.size() == 1) {
-            return otherParents.get(0).getGeneration();
+            return otherParents.getFirst().eventDescriptor().generation();
         }
         // 0.46.0 adds support for multiple other parents in the serialization scheme, but not yet in the
         // implementation. This exception should never be reached unless we have multiple parents and need to
@@ -472,7 +463,7 @@ public class UnsignedEvent extends AbstractHashable {
         if (selfParent == null) {
             return null;
         }
-        return selfParent.getHash();
+        return selfParent.hash();
     }
 
     /**
@@ -487,7 +478,7 @@ public class UnsignedEvent extends AbstractHashable {
             return null;
         }
         if (otherParents.size() == 1) {
-            return otherParents.get(0).getHash();
+            return otherParents.getFirst().hash();
         }
         // 0.46.0 adds support for multiple other parents in the serialization scheme, but not yet in the
         // implementation. This exception should never be reached unless we have multiple parents and need to
@@ -522,7 +513,7 @@ public class UnsignedEvent extends AbstractHashable {
      * @return array of transactions inside this event instance
      */
     @NonNull
-    public ConsensusTransactionImpl[] getTransactions() {
+    public List<PayloadWrapper> getTransactions() {
         return transactions;
     }
 
@@ -549,13 +540,14 @@ public class UnsignedEvent extends AbstractHashable {
      * @throws IllegalStateException if called prior to this event being hashed
      */
     @NonNull
-    public EventDescriptor getDescriptor() {
+    public EventDescriptorWrapper getDescriptor() {
         if (descriptor == null) {
             if (getHash() == null) {
                 throw new IllegalStateException("The hash of the event must be set before creating the descriptor");
             }
 
-            descriptor = new EventDescriptor(getHash(), getCreatorId(), getGeneration(), eventCore.birthRound());
+            descriptor = new EventDescriptorWrapper(new EventDescriptor(
+                    getHash().getBytes(), getEventCore().creatorNodeId(), getBirthRound(), getGeneration()));
         }
 
         return descriptor;
